Fix some RTL layout issues

--- a/css/80_app.css
+++ b/css/80_app.css
@@ -1877,13 +1877,13 @@ a.hide-toggle {
     flex: 0 1 auto;
     width: 80px;
 }
-.form-field-input-maxspeed > input:first-of-type {
+.ideditor[dir='ltr'] .form-field-input-maxspeed > input:first-of-type {
     border-radius: 0 0 0 4px;
 }
 .ideditor[dir='rtl'] .form-field-input-maxspeed > input:first-of-type {
     border-radius: 0 0 4px 0;
 }
-.form-field-input-maxspeed > input:last-of-type {
+.ideditor[dir='ltr'] .form-field-input-maxspeed > input:last-of-type {
     border-left: 0;
     border-radius: 0 0 4px 0;
 }
@@ -4457,9 +4457,6 @@ img.tile-debug {
     position: absolute;
     color: #ccc;
     top: 0.45em;
-}
-.ideditor[dir='rtl'] .scale-block .scale-text {
-    transform: scaleX(-1);
 }
 
 .scale-block .scale path {
